fixed spacing for header

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
 }
 
 .header {
-  padding: 0px 40px;
+  padding: 25px 40px 0px 40px;
   background: white;
 }
 
